# log4cxxNG

./: .gitignore  CMakeLists.txt  NOTICE  README.md  log4cxxNG.doxyfile
src/: CMakeLists.txt
src/cmake/: projectVersionDetails.cmake
src/examples/cpp/: CMakeLists.txt  console.cpp  delayedloop.cpp  stream.cpp  trivial.cpp
src/main/: CMakeLists.txt
src/main/cpp/: CMakeLists.txt  action.cpp  andfilter.cpp  appenderattachableimpl.cpp  appenderskeleton.cpp  aprinitializer.cpp  asyncappender.cpp  asyncappender_nonblocking.cpp  basicconfigurator.cpp  bufferedwriter.cpp  bytearrayinputstream.cpp  bytearrayoutputstream.cpp  bytebuffer.cpp  cacheddateformat.cpp  charsetdecoder.cpp  charsetencoder.cpp  class.cpp  classnamepatternconverter.cpp  classregistration.cpp  condition.cpp  configurator.cpp  consoleappender.cpp  cyclicbuffer.cpp  dailyrollingfileappender.cpp  datagrampacket.cpp  datagramsocket.cpp  date.cpp  dateformat.cpp  datelayout.cpp  datepatternconverter.cpp  defaultconfigurator.cpp  defaultloggerfactory.cpp  defaultrepositoryselector.cpp  domconfigurator.cpp  exception.cpp  fallbackerrorhandler.cpp  file.cpp  fileappender.cpp  filedatepatternconverter.cpp  fileinputstream.cpp  (+114 more)
src/main/include/: CMakeLists.txt
src/main/resources/: CMakeLists.txt
src/test/cpp/: CMakeLists.txt  appenderskeletontestcase.cpp  appenderskeletontestcase.h  asyncappendertestcase.cpp  consoleappendertestcase.cpp  decodingtest.cpp  encodingtest.cpp  fileappendertest.cpp  fileappendertestcase.cpp  fileappendertestcase.h  filetestcase.cpp  hierarchytest.cpp  insertwide.h  logunit.cpp  (+18 more)
(+285 files in other folders)
